# tennis_scoreboard

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
migration/: env.py
migration/versions/: 265e25486c6b_init_rev.py
migrations/: env.py
migrations/versions/: 95f07b66a535_init.py
src/: __init__.py  app.py  config.py
src/dao/: __init__.py  database.py  match.py  player.py
src/endpoints/: __init__.py  match.py  player.py
src/frontend/: footer.html  head.html  header.html  index.html  match-result.html  match-score.html  matches.html  new-match.html
src/frontend/css/: style.css
src/frontend/static/css/: style.css
src/match_manager/: match_components.py  match_observer.py
src/models/: __init__.py  match.py  player.py
src/schemas/: __init__.py  match.py  player.py
src/server/: middlewares.py  renderer.py  router.py  wsgi.py
src/services/: __init__.py  match.py  player.py
src/utils/: __init__.py  exceptions.py  logger.py  parser.py  validator.py
tests/: test_match_observer.py
